<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:targetApi="lollipop">

    <LinearLayout
        style="@style/LinearLayout"
        android:backgroundTint="@color/colorPrimaryLight">

        <TextView
            android:id="@+id/fifthQuestion"
            style="@style/QuestionTextView"
            android:text="@string/question_5" />

        <ImageView
            android:id="@+id/ko"
            style="@style/QuestionImageView"
            android:contentDescription="@string/ko_image_desc"
            app:srcCompat="@drawable/hiragana_ko" />

        <RadioGroup style="@style/RadioGroup">

            <RadioButton
                android:id="@+id/radioButton"
                style="@style/CheckBoxes"
                android:onClick="onRadioButtonClicked"
                android:text="@string/ko_answer_1" />

            <RadioButton
                android:id="@+id/radioButton2"
                style="@style/CheckBoxes"
                android:onClick="onRadioButtonClicked"
                android:text="@string/ko_answer_2" />

            <RadioButton
                android:id="@+id/radioButton3"
                style="@style/CheckBoxes"
                android:onClick="onRadioButtonClicked"
                android:text="@string/ko_answer_3" />

            <RadioButton
                android:id="@+id/radioButton4"
                style="@style/CheckBoxes"
                android:onClick="onRadioButtonClicked"
                android:text="@string/ko_answer_4" />
        </RadioGroup>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/toResults"
            style="@style/FabButton"
            android:onClick="onClick"
            app:srcCompat="@drawable/ic_arrow_forward_black_24dp" />

    </LinearLayout>

</ScrollView>